added main funclty
