# internal/web/router.go
@@ -3,10 +3,12 @@ package web
 //go:generate swag init -g ../../cmd/2gis-crawler/main.go -o ../../cmd/2gis-crawler/docs
 
 import (
+	"bytes"
 	"log"
 	"net/http"
 
 	"github.com/go-chi/render"
+	"github.com/gwhite1893/2gis-crawler/internal/parser"
 	"github.com/pkg/errors"
 )
 
@@ -15,9 +17,7 @@ const (
 	badRequestDescription = "Не удалось получить параметры запроса"
 )
 
-var (
-	errBadRequest = errors.New(badRequestMessage)
-)
+var errBadRequest = errors.New(badRequestMessage)
 
 type sourcePollRequest struct {
 	Data []string `json:"data"`
@@ -32,15 +32,16 @@ func (s *sourcePollRequest) Bind(*http.Request) error {
 }
 
 type PollResult struct {
-	URL  string `json:"url"`
-	Body string `json:"body"`
+	URL   string `json:"url"`
+	Body  string `json:"body"`
+	Error string `json:"error,omitempty"`
 }
 
-type sourcePollResponse struct {
-	Data []PollResult `json:"data"`
+type sourcesPollResponse struct {
+	Data []*PollResult `json:"data"`
 }
 
-func (s *sourcePollResponse) Render(http.ResponseWriter, *http.Request) error {
+func (s *sourcesPollResponse) Render(http.ResponseWriter, *http.Request) error {
 	return nil
 }
 
@@ -52,11 +53,13 @@ func (s *sourcePollResponse) Render(http.ResponseWriter, *http.Request) error {
 // @Accept  json
 // @Produce json
 // @Param	data body sourcePollRequest true "data"
-// @Success 200 {object}  sourcePollResponse
+// @Success 200 {object}  sourcesPollResponse
 // @Failure 400 {object} errResponse
 // @Failure 500 {object} errResponse
 // @Router /resources/poll [post]
 func (s *Server) PollSources(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
 	req := &sourcePollRequest{}
 	if err := render.Bind(r, req); err != nil {
 		log.Print(err)
@@ -66,13 +69,32 @@ func (s *Server) PollSources(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	_ = render.Render(w, r, &sourcePollResponse{
-		Data: []PollResult{
-			{
-				URL:  "url",
-				Body: "body",
-			},
-		},
+	result, err := s.crawler.Crawl(ctx, req.Data)
+	if err != nil {
+		log.Print(err)
+
+		_ = render.Render(w, r, errRender(
+			http.StatusInternalServerError,
+			err.Error(),
+			"crawl failed",
+		))
+
+		return
+	}
+
+	const tagName = "title"
+
+	pollResult := make([]*PollResult, len(result))
+	for i := range result {
+		pollResult[i] = &PollResult{
+			URL:   result[i].URL,
+			Body:  parser.GetTagValue(bytes.NewReader(result[i].Content), tagName),
+			Error: result[i].Err,
+		}
+	}
+
+	_ = render.Render(w, r, &sourcesPollResponse{
+		Data: pollResult,
 	})
 }
 
@@ -85,13 +107,21 @@ func errInvalidRequest() render.Renderer {
 }
 
 type errResponse struct {
-	HTTPStatusCode int    `json:"status,omitempty"`      // http response status code
-	ErrorText      string `json:"error,omitempty"`       // application-level error message
-	Description    string `json:"description,omitempty"` // user-level status message
+	HTTPStatusCode int    `json:"status,omitempty"`
+	ErrorText      string `json:"error,omitempty"`
+	Description    string `json:"description,omitempty"`
 }
 
 func (e *errResponse) Render(_ http.ResponseWriter, r *http.Request) error {
 	render.Status(r, e.HTTPStatusCode)
 
 	return nil
+}
+
+func errRender(httpStatusCode int, errorText, description string) render.Renderer {
+	return &errResponse{
+		HTTPStatusCode: httpStatusCode,
+		ErrorText:      errorText,
+		Description:    description,
+	}
 }
